--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <table id="principal">
             <h1>Raphael Ferreira Santos</h1>
 
-            <img src="img/indice.jpg" width="500px">
+            <img src="https://raaphaeel.github.io/indice.jpg" width="500px">
 
         </table>
         <hr>
