--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <table id="principal">
             <h1>Raphael Ferreira Santos</h1>
 
-            <img src="https://raw.githubusercontent.com/RaaphaeeL/raaphaeel.github.io/main/Img/indice.jpg">
+            <img src="Img/indice.jpg">
 
         </table>
         <hr>
