--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <table id="principal">
             <h1>Raphael Ferreira Santos</h1>
 
-            <img src="Img/indice.jpg">
+            <img src="Img/indice.jpg" width= "500px" >
 
         </table>
         <hr>
